 - HTTP client connectors now set the "Host" header manually when proper information is found via Call.getServer()."name" and "port".
 - Refactored the parsing/construction of the target resource reference to handle both relative and absolute URIs.
 - Improved robustness of Reference when handling relative URIs.
 
1.0 beta 18 (2006-08-19)
[Bugs fixed]
 - Status descriptions are now sent back to Jetty 6 for error statuses. Reported by AJ Barnes.
 - The DirectoryHandler was listing the directories twice to do the content negotiation, slowing down the process. 
 - The content negotiation was not properly handling the situation where no language and media type preferences are defined. Reported by Thierry Boileau.
 - Fixed potential NPE in DefaultClient and RedirectTestCase when no connector found.
 - Fixed bug in NRE's factory which prevented the detection of HTTPS connectors. Now all HTTPS connectors work fully (Simple, Jetty5 and Jetty6).
 - Fixed bug in DirectoryHandler preventing the return of a directory listing if an index file name was set but not found. Reported by Thierry Boileau.
 - Added option to turn off content negotiation on DirectoryHandler which was causing some issues with online Javadocs. The content negotiation is now
   off by default. Reported by Tiago Silveira.
 - Fixed caching conflicts with content negotiation. Now ETags are properly considered. Reported by Chris Winters.
 - Fixed potential NPE in the DateUtils comparison methods. Reported by Chris Winters.
 - Reworked all equals() methods in the data package to accept Object as parameter. 
 - Fixed bug in MediaType.includes() and added a JUnit test case for MediaType comparison. Report and patch by Chris Winters.
 - Fixed bug in fluent builders prevent the proper usage of routers in routing mode.
 
[API breaking changes]
 - Removed get/setTimeout() methods from the Client interface and related classes. Also, removed the configureSsl() method from the Server interface.