@@ -41,6 +41,10 @@ backport: false
 # public distribution. 
 javadoc: true
 
+# Indicates if the Javadocs of the implementation code
+# should be hidden.
+javadoc-hide: true
+
 # Verbose flag currently used during Java compilation 
 # and Javadocs generation.
 verbose: false
